# MSFSDock

./: .gitignore  BaseAction.cpp  BaseAction.h  CMakeLists.txt  CMakePresets.json  DialAction.cpp  DialAction.h  GDIFonts.cpp  GDIPlusManager.cpp  GDIPlusManager.h  KnownVariables.h  Logger.cpp  Logger.h  Plugin.cpp  Plugin.h  README.md  Sim.cpp  Sim.h  SimGroup.h  SimManager.cpp  SimManager.h  SimVar.h  ToggleAction.cpp  ToggleAction.h  build.py  main.cpp
SimConnect/: SimConnect.h  SimConnect.lib
SimData/: KnownVariables.hpp  PMDG_NG3_SDK.h  SimData.cpp  SimData.hpp  SimVar.hpp  common_events.inc  pmdg_events.inc  pmdg_parse_sdk.py  pmdg_sdk.cpp  pmdg_sdk.hpp  pmdg_variables.inc
SimManager/: SimManager.cpp  SimManager.hpp
StreamDockCPPSDK/StreamDockSDK/: HSDAction.cpp  HSDAction.h  HSDBasePlugin.h  HSDConnectionManager.cpp  HSDPlugin.cpp  HSDPlugin.h
com.rvoronov.msfsDock.sdPlugin/: README.md  en.json  manifest.json  ru.json
com.rvoronov.msfsDock.sdPlugin/ConditionalButton/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/DualDial/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/GenericButton/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/GenericDial/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/GenericGauge/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/GenericRadio/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/GenericSwitch/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/GenericToggle/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/docs/: ACTIONS.md  README.md
com.rvoronov.msfsDock.sdPlugin/fonts/: COPYRIGHT.txt
com.rvoronov.msfsDock.sdPlugin/propertyInspector/CommonPi/: autocomplete.js  piApply.js  piAutocomplete.js  piCore.js  piInit.js  styles.css
com.rvoronov.msfsDock.sdPlugin/propertyInspector/ConditionalButton/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/propertyInspector/DualDial/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/propertyInspector/GenericButton/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/propertyInspector/GenericData/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/propertyInspector/GenericDial/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/propertyInspector/GenericGauge/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/propertyInspector/GenericRadio/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/propertyInspector/GenericSwitch/: index.html  index.js
com.rvoronov.msfsDock.sdPlugin/static/: action.js  readme.md
com.rvoronov.msfsDock.sdPlugin/static/autocomplete/: autocomplete.css  autocomplete.js
com.rvoronov.msfsDock.sdPlugin/static/extra/: styles.css
com.rvoronov.msfsDock.sdPlugin/static/utils/: color.js  common.js
com.rvoronov.msfsDock.sdPlugin/utils/: convert.py
core/: BaseAction.cpp  BaseAction.hpp  ButtonAction.cpp  ButtonAction.hpp  DataAction.cpp  DataAction.hpp  DialAction.cpp  DialAction.hpp  GaugeAction.cpp  GaugeAction.hpp  SwitchAction.cpp  SwitchAction.hpp  Utils.hpp
image_srcs/: dataIcon.xcf  dial.xcf  dialIcon.xcf  dualdial.xcf  gaugeIcon.xcf  logo.xcf  switchIcon.xcf  toggle_button.xcf
plugin/: Logger.cpp  Logger.hpp  Plugin.cpp  Plugin.hpp
resources/: version.rc.in
sim/: SimManager.cpp  SimManager.hpp  SimManagerMock.cpp  SimManagerMock.hpp
ui/: GDIFonts.cpp  GDIFonts.hpp  GDIPlusManager.cpp  GDIPlusManager.hpp  UIManager.cpp  UIManager.hpp
